#44 fixes the footer on IE11

--- a/input/assets/styles.scss
+++ b/input/assets/styles.scss
@@ -13,12 +13,10 @@
 }
 
 html, body {
-    height: 100%; 
     background-color: rgb(248, 249, 250);
 }
 
 main {
-    flex: 1;
 }
 
 .flex-0 {
